--- a/style.css
+++ b/style.css
@@ -5,11 +5,34 @@ body {
 
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 100px);
-    background: lightblue;
-    padding: 1rem;
+    /* grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(5, 100px); */
 
+    grid-template-columns: repeat(3, [col-start] 1fr [col-end]);
+    grid-template-rows: repeat(5, [row-start] 100px [row-end]);
+    background: lightblue;
+    padding: 1em;
+}
+
+.grid1 {
+    grid-column: col-start / col-start 3;
+    grid-row: row-start 3 / row-start 5;
+
+
+    /* grid-column: 2 / 3; */
+    /* grid-column-start: 2;
+    grid-row-end: 3; */
+    /* grid-row: 2 / 3; */
+    /* grid-row-start: 3;
+    grid-row-end: 4; */
+    /* grid-area: row start / column start / row end / column end; */
+    /* grid-area: 1 / 3 / 2 / 4; */
+
+    /* grid-column: 2 / 4; 
+    grid-row: 1 / 5 ; */
+
+    /* grid-column: 2 / span 2;
+    grid-row: 2 / span 3; */
 }
 
 .grid-items {
